<resources>
    <string name="app_name">Cats</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <string name="fish">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_filter">Filter</string>
    <string name="choose_filter">Choose filter</string>
    <string name="filter_boxes">Boxes</string>
    <string name="filter_clothes">Clothes</string>
    <string name="filter_hats">Hats</string>
    <string name="filter_sinks">Sinks</string>
    <string name="filter_space">Space</string>
    <string name="filter_sunglasses">Sunglasses</string>
    <string name="filter_ties">Ties</string>
    <string name="filter_apply">Apply filter</string>
    <string name="filter_reset">Reset filters</string>
    <string name="dialog_title">Delete image</string>
    <string name="dialog_message">Delete from favourites?</string>
    <string name="downloads_dialog_message">Load photo</string>
    <string name="authorisation">Input your email</string>
    <string name="apply">Apply</string>
    <string name="delete_user">Delete user</string>
    <string name="show_user">Show user</string>
    <string name="dialog_yes">Delete image</string>
    <string name="downloads_dialog_image">Add from gallery</string>
    <string name="downloads_dialog_photo">Add from camera</string>
</resources>