<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        tools:context=".FilterActivity">

        <CheckBox
            android:id="@+id/filterBoxes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_boxes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/filterClothes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_clothes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterBoxes" />

        <CheckBox
            android:id="@+id/filterHats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_hats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterClothes" />

        <CheckBox
            android:id="@+id/filterSinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_sinks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterHats" />

        <CheckBox
            android:id="@+id/filterSpace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterSinks" />

        <CheckBox
            android:id="@+id/filterSunglasses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_sunglasses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterSpace" />

        <CheckBox
            android:id="@+id/filterTies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_ties"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterSunglasses" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_apply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterTies" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>